Segundo commit reto 1

--- a/index_1reto.html
+++ b/index_1reto.html
@@ -20,9 +20,9 @@
             </div>
         </main>
         <footer class="footer">
-            <a href="https://facebook.com" target="blank">Facebook</a>
-            <a href="https://twitter.com" target="blank">Twitter</a>
-            <a href="https://instagram.com" target="blank">Instagram</a>
+            <a class="facebook" href="https://facebook.com" target="blank"></a>
+            <a class="twitter" href="https://twitter.com" target="blank"></a>
+            <a class="instagram" href="https://instagram.com" target="blank"></a>
         </footer>
     </body>
 </html>
